src/objects/MikaAuthentication__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>external_src_url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>external src url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>password__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>post_external_src_url__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>post external src url</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>username__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>username</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Mika Authentication</label>
</CustomObject>